<resources>
    <string name="app_name">ControleFacil</string>
    <string name="app_name_2">Controle Facil</string>
    <string name="app_slogan">O Controle de suas financas na palma da mão</string>
    <string name="edt_email_hint">Email</string>
    <string name="tv_new_account">Realizar cadastro</string>
    <string name="btn_login">Entrar</string>
    <string name="tv_privacy_policies">Politicas de privacidade</string>
    <string name="tv_password_hint">Senha</string>
    <string name="forgot_title">Recuperação de acesso</string>
    <string name="tv_forgot_password">Esqueci minha senha</string>
    <string name="tv_forgot_message">Forneça seu email cadastrado. uma menssagem de email será enviada a você com o passo a passo para a recuperação de seu acesso.</string>
    <string name="edt_forgot_email_hint">Email cadastrado</string>
    <string name="btn_recover">Iniciar recuperação</string>
    <string name="tv_message_privacy_policies">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</string>
    <string name="privacy_policies_title">Politicas de privacidade</string>
    <string name="tv_privacy_policies_title">Tipo de dados coletados</string>
    <string name="btn_register">Finalizar Cadastro</string>
    <string name="user_title">Cadastro de Usuário</string>
    <string name="error_empty_email">Necessário informar o e-mail</string>
    <string name="error_empty_password">Necessário informar a senha</string>
    <string name="toast_exists_email">Já existe esse e-mail cadastrado, tente outro!</string>
    <string name="toast_invalid_user_or_password">Usuário ou Senha inválidos</string>
    <string name="toast_fields_not_filled_login">Necessário informar o campo de e-mail e senha para prosseguir!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_recipes">Receitas</string>
    <string name="tab_expenses">Despesas</string>
    <string name="title_expenses">Despesas</string>
    <string name="title_recipes">Receitas</string>
    <string name="edt_category_name_hint">Nome</string>
    <string name="toast_error_delete_last_category">Não é possivel excluir, é necessário pelo menos uma</string>
    <string name="edt_maturity_hint">Vencimento</string>
    <string name="edt_value_hint">Insira o valor</string>
    <string name="edt_description_hint">Descrição</string>
    <string name="chk_payment_hint">Pago</string>
    <string name="chk_fixed_recipe_text">Receita Fixa</string>
    <string name="chk_repeat_text">Repetir</string>
    <string name="edt_numbe_of_times_hint">Quantidade de X</string>
    <string name="edt_period_hint">Mensal</string>
    <string name="dialog_period_title">Escolha o periodo</string>
    <string name="dialog_list_icons_category_title">Escolha um ícone</string>
    <string name="search_category_hint">Procure a categoria...</string>
    <string name="release_title">Lançamento</string>
</resources>
