<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="br.com.rest.controlefacil.ui.activity.login.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <ImageView
            android:id="@id/iv_logo"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/logo" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_logo"
            android:text="@string/app_name_2"
            style="@style/TitleTheme" />

        <TextView
            android:id="@+id/tv_app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_app_name"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_logo"
            android:text="@string/app_slogan"
            style="@style/SubTitleTheme" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:layout_marginTop="16dp"
            android:hint="@string/edt_email_hint"
            android:inputType="textEmailAddress"
            style="@style/EdtLoginTheme"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_email"
            android:layout_marginTop="16dp"
            android:hint="@string/tv_password_hint"
            android:inputType="textPassword"
            style="@style/EdtLoginTheme"/>

        <TextView
            android:id="@+id/tv_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/edt_password"
            android:layout_marginTop="8dp"
            android:text="@string/tv_new_account"
            android:textColor="?attr/colorPrimary" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_password"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/tv_new_account"
            style="@style/ButtonDefaultTheme"
            android:text="@string/btn_login" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="8dp"
            android:text="@string/tv_forgot_password"
            android:textColor="?attr/colorPrimary" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_privacy_policies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_privacy_policies"
        android:textColor="?attr/colorPrimary" />
</RelativeLayout>
