<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="br.com.rest.controlefacil.ui.activity.fotgot_password.ForgotPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="32dp">
        <ImageView
            android:id="@+id/iv_info"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_info"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_forgot_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/tv_forgot_message"
            android:layout_toRightOf="@id/iv_info"
            style="@style/SubTitleTheme"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_forgot_message"
            android:layout_marginTop="32dp"
            android:hint="@string/edt_forgot_email_hint"
            android:inputType="textEmailAddress"
            style="@style/EdtLoginTheme"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_forgot_email"
            android:layout_marginTop="16dp"
            android:text="@string/btn_recover"
            style="@style/ButtonDefaultTheme"/>

    </RelativeLayout>


</RelativeLayout>
